# autoinstall-manager

./: .gitignore  .pre-commit-config.yaml  Makefile  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
backend/: __main__.py
backend/cli/: __init__.py  __main__.py  db_reset.py  db_shell.py  py_shell.py
backend/src/: __init__.py  dependencies.py  errors.py  models.py  settings.py
backend/src/alembic/: env.py  script.py.mako
backend/src/consts/: tags.py
backend/src/error_handlers/: __init__.py  err_default.py  err_pydantic.py  err_sqlalchemy.py  err_starlette.py
backend/src/queries/: config_node.py
backend/src/repositories/: __init__.py  config_node.py  device.py
backend/src/routes/: __init__.py  config_node.py  device.py  health_check.py  json_schema.py
backend/src/schemas/: autoinstall.py  enum_value.py  list_value.py
backend/src/services/: __init__.py  config_node.py  device.py
backend/src/tasks/: download_ubuntu_iso.py
backend/src/utils/: dockerlib.py  importlib.py  networklib.py  stdlib.py  strlib.py
dockerfiles/: backend.dockerfile  image-tools.dockerfile
dotenv/: .env.local
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  main.tsx  router.tsx  theme.ts  vite-env.d.ts
frontend/src/apis/: api.ts  client.ts
frontend/src/contexts/: index.ts
frontend/src/hooks/: useAPI.ts  useApp.ts
frontend/src/schemas/: api.ts
frontend/src/types/: react-query.d.ts
frontend/src/utils/: api.ts  json_schema.ts  snackbar.tsx  string.ts
infrastructures/: docker-compose.dev.yaml  frontend.dockerfile
(+13 files in other folders)
