[project]
name = "autoinstall-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic[tz]>=1.16.5",
    "fastapi>=0.117.1",
    "greenlet>=3.2.4",
    "packaging>=25.0",
    "psycopg>=3.2.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.25",
    "toml>=0.10.2",
    "typer>=0.19.2",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "pre-commit>=4.3.0",
]

[tool.alembic]
script_location = "%(here)s/backend/src/alembic"
prepend_sys_path = ["%(here)s/backend/"]
file_template = "%%(year)d%%(month).2d%%(day).2d_%%(rev)s"
timezone = "Asia/Seoul"

[tool.black]
line-length = 150
target-version = ["py313"]

[tool.isort]
line_length = 150
profile = "black"

[tool.bandit]
exclude_dirs = ["test", ".venv"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_any_unimported = true
disallow_any_decorated = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 150
target-version = "py313"

[tool.ruff.lint]
fixable = ["ALL"]
